# UIUX_Quamtumy

./: .gitignore  .vercelignore  1.js  README.md  index.html  vercel.json  創業計画書_Doctor_Canvas_草案.md
backend/: .env.example  1.rs  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yml  fly.toml  render.yaml
backend/docs/: openapi.yaml  seed_demo.sql
backend/migrations/: 20250308000001_create_users.sql  20260318000001_artworks_stripe_purchases.sql  20260319000001_work_progress.sql  20260427000001_comments_favorites.sql  20260531000001_ai_pipeline_jobs.sql
backend/src/: artworks.rs  auth.rs  checkout.rs  community.rs  error.rs  handlers.rs  main.rs  models.rs  pdf_upload.rs  stripe_webhook.rs
docs/: JWT-TOKENS.md  OPERATIONS.md  ORCHESTRATOR.md  PAPER_TO_MANGA_AI.md  PIPELINE_ARCHITECTURE.md  STRIPE.md
tools/ai-orchestrator/: .env.example  README.md  orchestrator.py  requirements.txt
tools/paper-manga-name/: _hexcheck.py  _patch2.py  _patch_settings.py  current_story.json  double-slit-emulator.html  double-slit-manga-name-3pages.json  extracted_paper.txt  manga-name-page.sample.json  manga-name-page.schema.json  manga-name-page.types.ts  name.html  open-viewer.bat  package.json  paper_summary.txt  paper_to_name.py  sample_paper.txt  server.py  viewer.html
tools/paper-manga-name/scripts/: SETUP_AI.md  install_sd.bat  prepare_lora.py  start_sd.bat  train_lora.py
