[package]
name = "quantumy-auth-api"
version = "0.1.0"
edition = "2021"
description = "User registration and login API (Axum + sqlx)"

[dependencies]
# Web
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (PostgreSQL と SQLite 両方対応；本番は postgres のみでも可)
sqlx = {
  version = "0.8",
  features = [
    "runtime-tokio-native-tls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
  ]
}

# 認証・パスワード
bcrypt = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }

# JWT（保護API用の簡易トークン）
jsonwebtoken = "9"

# 環境変数・ログ
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
