[package]
name = "quantumy-auth-api"
version = "0.1.0"
edition = "2021"
description = "User registration and login API (Axum + sqlx)"

[dependencies]
# Web
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (PostgreSQL と SQLite 両方対応；本番は postgres のみでも可)
sqlx = {
  version = "0.8",
  features = [
    "runtime-tokio-native-tls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
  ]
}

# 日時
chrono = { version = "0.4", features = ["serde"] }

# 認証・パスワード
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# JWT（保護API用の簡易トークン）
jsonwebtoken = "9"

# セキュリティ（レート制限）
# 0.6+ は axum 0.8 依存のため、本プロジェクトの axum 0.7 と整合する 0.4 系を使用
tower_governor = "0.4.3"

# 環境変数・ログ
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 論文→ネーム案（OpenAI 任意）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# PDF テキスト抽出（スキャンPDFは非対応）
pdf-extract = "0.7"

# B1 セクション分割用（軽量正規表現、std のみに依存）
regex-lite = "0.1"

# Stripe Checkout 用フォーム URL エンコード
urlencoding = "2"

# Stripe Webhook 署名検証（HMAC-SHA256）
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
